--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
                     <li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
                 </ul>
-                
+
                 <div class="hamburger">
                     <div></div>
                     <div></div>
@@ -66,7 +66,13 @@
 
                 <div class="main__slider swiper-container">
                     <div class="main__swiper-wrapper swiper-wrapper">
-                        <div class="main__slide swiper-slide">
+                        <!-- <div class="main__slide swiper-slide">
+                            <div class="main__slider-quote"></div>
+                            <div class="main__slider-name"></div>
+                            <div class="main__slider-price"></div>
+                        </div> -->
+
+                        <!-- <div class="main__slide swiper-slide">
                             <div class="main__slider-quote">“</div>
                             <div class="main__slider-name">Maybelline Face Studio Master</div>
                             <div class="main__slider-price">14.99</div>
@@ -76,13 +82,7 @@
                             <div class="main__slider-quote">“</div>
                             <div class="main__slider-name">Maybelline Face Studio Master</div>
                             <div class="main__slider-price">14.99</div>
-                        </div>
-
-                        <div class="main__slide swiper-slide">
-                            <div class="main__slider-quote">“</div>
-                            <div class="main__slider-name">Maybelline Face Studio Master</div>
-                            <div class="main__slider-price">14.99</div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="swiper-button-prev"></div>
