--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header class="header">
             <div class="logo">
-                <img src="./icons/Triangle (1).svg" alt="triangle-logo" class="logo_img">
+                <img src="./icons/Triangle (1).svg" alt="triangle-logo" class="logo__img">
                 <div class="logo__text">penrose</div>
             </div>
             <nav class="nav">
