--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
+            <a href="./index.html" class="logo">
                 <img src="./icons/Triangle (1).svg" alt="triangle-logo" class="logo__img">
                 <div class="logo__text">penrose</div>
-            </div>
+            </a>
             <nav class="nav">
                 <ul class="menu">
                     <div class="menu__close">
@@ -25,22 +25,22 @@
                             <path d="M17.1568 14.5231L28.4489 3.23075C29.1837 2.49623 29.1837 1.30861 28.4489 0.574085C27.7144 -0.160437 26.5267 -0.160437 25.7922 0.574085L14.4998 11.8665L3.20781 0.574085C2.47295 -0.160437 1.28567 -0.160437 0.551149 0.574085C-0.183716 1.30861 -0.183716 2.49623 0.551149 3.23075L11.8432 14.5231L0.551149 25.8155C-0.183716 26.55 -0.183716 27.7376 0.551149 28.4721C0.917206 28.8385 1.39852 29.0226 1.87948 29.0226C2.36045 29.0226 2.84141 28.8385 3.20781 28.4721L14.4998 17.1798L25.7922 28.4721C26.1586 28.8385 26.6396 29.0226 27.1205 29.0226C27.6015 29.0226 28.0825 28.8385 28.4489 28.4721C29.1837 27.7376 29.1837 26.55 28.4489 25.8155L17.1568 14.5231Z" fill="#C445F4"/>
                         </svg>
                     </div>
-                    <li class="menu__item"><a href="#" class="menu__link menu__link-first">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Collections</a></li>
+                    <li class="menu__item"><a href="./index.html" class="menu__link menu__link-first">Home</a></li>
+                    <li class="menu__item"><a href="./index.html" class="menu__link">Collections</a></li>
                     <li class="menu__item">
                         <a href="#" class="menu_link">
                             <div class="menu__dropdown-wrapper">
                                 <button class="menu__dropdown_btn">Store</button>
                                 <ul class="menu__dropdown_list">
-                                    <li class="menu__dropdown_list-item"><a href="#">Store</a></li>
-                                    <li class="menu__dropdown_list-item"><a href="#">Women</a></li>
-                                    <li class="menu__dropdown_list-item"><a href="#">Men</a></li>
-                                    <li class="menu__dropdown_list-item"><a href="#">Kids</a></li>
+                                    <li class="menu__dropdown_list-item"><a href="./index.html">Store</a></li>
+                                    <li class="menu__dropdown_list-item"><a href="./index.html">Women</a></li>
+                                    <li class="menu__dropdown_list-item"><a href="./index.html">Men</a></li>
+                                    <li class="menu__dropdown_list-item"><a href="./index.html">Kids</a></li>
                                 </ul>
                             </div>
                         </a>
                     </li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
+                    <li class="menu__item"><a href="./index.html" class="menu__link">Contacts</a></li>
                 </ul>
 
                 <div class="hamburger">
@@ -66,23 +66,7 @@
 
                 <div class="main__slider swiper-container">
                     <div class="main__swiper-wrapper swiper-wrapper">
-                        <!-- <div class="main__slide swiper-slide">
-                            <div class="main__slider-quote"></div>
-                            <div class="main__slider-name"></div>
-                            <div class="main__slider-price"></div>
-                        </div> -->
-
-                        <!-- <div class="main__slide swiper-slide">
-                            <div class="main__slider-quote">“</div>
-                            <div class="main__slider-name">Maybelline Face Studio Master</div>
-                            <div class="main__slider-price">14.99</div>
-                        </div>
-
-                        <div class="main__slide swiper-slide">
-                            <div class="main__slider-quote">“</div>
-                            <div class="main__slider-name">Maybelline Face Studio Master</div>
-                            <div class="main__slider-price">14.99</div>
-                        </div> -->
+                        <!-- From JS -->
                     </div>
 
                     <div class="swiper-button-prev"></div>
